deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ai-ext
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: paperless-aiext.dev4fun.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: paperless-ai-ext-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ai-ext-webapp
                port:
                  number: 80
  tls:
  - hosts:
    - paperless-aiext.dev4fun.cloud
    secretName: paperless-aiext-tls-cert
